objects/CW_Order_Note__x.object
<CustomObject>
    <description>CW Order Note</description>
    <externalDataSource>CWConnection</externalDataSource>
    <externalName>CW Order Note</externalName>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company</description>
        <externalDeveloperName>Company</externalDeveloperName>
        <label>Company</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date</description>
        <externalDeveloperName>Date</externalDeveloperName>
        <label>Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <description>Message Type</description>
        <externalDeveloperName>Message Type</externalDeveloperName>
        <label>Message Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message</description>
        <externalDeveloperName>Message</externalDeveloperName>
        <label>Message</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order Number</description>
        <externalDeveloperName>Order Number</externalDeveloperName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Sequence Number</description>
        <externalDeveloperName>Sequence Number</externalDeveloperName>
        <label>Sequence Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <description>Ship To</description>
        <externalDeveloperName>Ship To</externalDeveloperName>
        <label>Ship To</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>User</description>
        <externalDeveloperName>User</externalDeveloperName>
        <label>User</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>CW Order Note</label>
    <pluralLabel>CW Order Note</pluralLabel>
</CustomObject>